{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 238,
  "lineage": "a7028662-eea2-71f1-19e0-57a1258f24b1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "apache",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a1179631ec8933d7",
            "arn": "arn:aws:ec2:us-east-1:211125730552:instance/i-046db386285618133",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-046db386285618133",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c3039f42a4a8adcb",
            "private_dns": "ip-10-10-0-222.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.222",
            "public_ip": "54.87.0.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags_all": {
                  "IAC": "Terraform",
                  "cloud": "aws",
                  "env": "dev",
                  "owner": "argonz",
                  "project": "cerberus",
                  "region": "virginia"
                },
                "throughput": 0,
                "volume_id": "vol-0f8915e370f150fb4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002637c5d2ef5e2b9",
            "tags": {
              "Name": "apache-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "apache-cerberus-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "argonz",
              "project": "cerberus",
              "region": "virginia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09ec8510b3f5822d6"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia",
            "data.aws_key_pair.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125730552:internet-gateway/igw-022d669a3310e329c",
            "id": "igw-022d669a3310e329c",
            "owner_id": "211125730552",
            "tags": {
              "Name": "igw_vpc_virginia-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "igw_vpc_virginia-cerberus-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "argonz",
              "project": "cerberus",
              "region": "virginia"
            },
            "vpc_id": "vpc-0efddc13c38bf3853"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125730552:route-table/rtb-06135711365d69b0f",
            "id": "rtb-06135711365d69b0f",
            "owner_id": "211125730552",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-022d669a3310e329c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_custom_rt-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "public_custom_rt-cerberus-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "argonz",
              "project": "cerberus",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efddc13c38bf3853"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083064384ac733fbf",
            "route_table_id": "rtb-06135711365d69b0f",
            "subnet_id": "subnet-002637c5d2ef5e2b9"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125730552:security-group/sg-09ec8510b3f5822d6",
            "description": "Allow SSH inbound traffic and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress rule for all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ec8510b3f5822d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Public Instance SG",
            "name_prefix": "",
            "owner_id": "211125730552",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Instance SG-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "Public Instance SG-cerberus-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "argonz",
              "project": "cerberus",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efddc13c38bf3853"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125730552:subnet/subnet-0ea08e3c36ce75674",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea08e3c36ce75674",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125730552",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "private_subnet-cerberus-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "argonz",
              "project": "cerberus",
              "region": "virginia"
            },
            "vpc_id": "vpc-0efddc13c38bf3853"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125730552:subnet/subnet-002637c5d2ef5e2b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002637c5d2ef5e2b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125730552",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "public_subnet-cerberus-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "argonz",
              "project": "cerberus",
              "region": "virginia"
            },
            "vpc_id": "vpc-0efddc13c38bf3853"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125730552:vpc/vpc-0efddc13c38bf3853",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0a7215dd1f49fe7ed",
            "default_route_table_id": "rtb-0f74f8f95b211d06b",
            "default_security_group_id": "sg-0b0813feed077e3c2",
            "dhcp_options_id": "dopt-041630b62efdf4cee",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0efddc13c38bf3853",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f74f8f95b211d06b",
            "owner_id": "211125730552",
            "tags": {
              "Name": "vpc_virginia-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "vpc_virginia-cerberus-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "argonz",
              "project": "cerberus",
              "region": "virginia"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125730552:security-group-rule/sgr-053eb2d7fd80d7777",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Egress rule for all traffic",
            "from_port": null,
            "id": "sgr-053eb2d7fd80d7777",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09ec8510b3f5822d6",
            "security_group_rule_id": "sgr-053eb2d7fd80d7777",
            "tags": null,
            "tags_all": {
              "IAC": "Terraform",
              "cloud": "aws",
              "env": "dev",
              "owner": "argonz",
              "project": "cerberus",
              "region": "virginia"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    }
  ]
}